fix mobile places filter margin and add close to details

--- a/app/styles/common/schedule/schedule.styl
+++ b/app/styles/common/schedule/schedule.styl
@@ -4,6 +4,11 @@
 .schedule
   .sched-details
     background $brand-info-bg
+    position relative
+    .details-close
+      position absolute
+      top 15px
+      right 0
 
   .cell-atom
     display block
