--- a/app/styles/places/index.styl
+++ b/app/styles/places/index.styl
@@ -10,7 +10,7 @@
       margin 0
       padding 0
       @media $media-max-phone
-        margin-top 20px
+        margin 0 4px
       li
         color: $link-color
         display inline-block
@@ -30,6 +30,7 @@
           margin 0
 
   .places-details
+    position relative
     .places
       margin 20px
       color: $brand-info
