add loading style and loading by 20 in professors list

--- a/app/styles/professors/index.styl
+++ b/app/styles/professors/index.styl
@@ -29,6 +29,9 @@
     margin-bottom 40px
     @media $media-max-phone
       padding 0
+    .loading
+      text-align center
+      margin-top 40px
     .professor
       display block
       text-decoration none
