style of "loading" in places index

--- a/app/styles/places/index.styl
+++ b/app/styles/places/index.styl
@@ -2,6 +2,9 @@
 
 #places-index
   margin-bottom 40px
+  .loading
+    text-align center
+    margin-top 40px
   .sched-week-switcher
     margin-top 4px
   .places-filter
